# Havklo_sdk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  USAGE_GUIDE.md  docker-compose.yml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/kraken-auth/: Cargo.toml
crates/kraken-auth/src/: credentials.rs  error.rs  lib.rs  token.rs
crates/kraken-book/: Cargo.toml
crates/kraken-book/benches/: l3_orderbook.rs  orderbook.rs  parsing.rs
crates/kraken-book/src/: checksum.rs  history.rs  lib.rs  orderbook.rs  storage.rs
crates/kraken-book/src/l3/: book.rs  mod.rs  order.rs
crates/kraken-futures-ws/: Cargo.toml
crates/kraken-futures-ws/src/: auth.rs  connection.rs  error.rs  lib.rs  types.rs
crates/kraken-futures-ws/src/channels/: book.rs  funding.rs  mod.rs  position.rs  ticker.rs  trade.rs
crates/kraken-rest/: Cargo.toml
crates/kraken-rest/src/: auth.rs  client.rs  error.rs  lib.rs  types.rs
crates/kraken-rest/src/endpoints/: account.rs  earn.rs  funding.rs  market.rs  mod.rs  trading.rs
crates/kraken-sdk/: Cargo.toml  README.md
crates/kraken-sdk/examples/: advanced_reconnect.rs  error_handling.rs  futures_stream.rs  graceful_shutdown.rs  live_validation.rs  market_maker.rs  multi_symbol.rs  observability_hooks.rs  orderbook_stream.rs  rest_trading.rs  simple_ticker.rs  stream_api.rs
crates/kraken-sdk/src/: auth.rs  builder.rs  client.rs  filter.rs  lib.rs  market.rs  metrics.rs  prelude.rs
crates/kraken-sdk/tests/: integration.rs
crates/kraken-sdk/tests/common/: mod.rs
crates/kraken-types/: Cargo.toml
crates/kraken-types/src/: enums.rs  error.rs  error_codes.rs  level.rs  lib.rs  messages.rs  rate_limit.rs  symbol.rs
crates/kraken-wasm/: Cargo.toml
crates/kraken-wasm/examples/browser/: README.md  index.html  types.ts
crates/kraken-wasm/src/: lib.rs
crates/kraken-ws/: Cargo.toml
crates/kraken-ws/src/: circuit_breaker.rs  connection.rs  endpoint.rs  events.rs  hooks.rs  lib.rs  order_tracker.rs  rate_limiter.rs  reconnect.rs  subscription.rs  trading.rs  transport.rs
crates/kraken-ws/tests/: integration_tests.rs
demos/: Cargo.toml
docs/: INTEGRATION.md  QUICKSTART.md  REST_API.md  WASM.md
havklo-tui/: Cargo.toml
havklo-tui/src/: app.rs  main.rs
havklo-tui/src/data/: futures.rs  mod.rs  spot.rs
havklo-tui/src/ui/: alerts.rs  dashboard.rs  footer.rs  futures.rs  header.rs  imbalance.rs  mod.rs  orderbook.rs  splash.rs
havklo-tui/src/widgets/: depth_bars.rs  gauge.rs  mod.rs
