[workspace]
resolver = "2"
members = [
    "crates/kraken-types",
    "crates/kraken-book",
    "crates/kraken-ws",
    "crates/kraken-auth",
    "crates/kraken-futures-ws",
    "crates/kraken-sdk",
    "crates/kraken-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Hitakshi Arora"]
repository = "https://github.com/havklo/havklo-sdk"
description = "Production-grade Rust SDK for Kraken's WebSocket API v2"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Precision (CRITICAL for financial data)
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.33"

# Async runtime (native only)
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
typed-builder = "0.18"
dashmap = "5"
parking_lot = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Checksum
crc32fast = "1.3"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }

# Internal crates
kraken-types = { path = "crates/kraken-types" }
kraken-book = { path = "crates/kraken-book" }
kraken-ws = { path = "crates/kraken-ws" }
kraken-auth = { path = "crates/kraken-auth" }
kraken-futures-ws = { path = "crates/kraken-futures-ws" }
kraken-sdk = { path = "crates/kraken-sdk" }

# Benchmarking
criterion = "0.5"
