[package]
name = "kraken-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "High-level SDK for Kraken WebSocket API v2"

[features]
default = []
metrics = ["prometheus", "lazy_static"]

[dependencies]
kraken-types = { workspace = true }
kraken-book = { workspace = true }
kraken-ws = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
typed-builder = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
dashmap = { workspace = true }

# Optional metrics dependencies
prometheus = { version = "0.14", optional = true }
lazy_static = { version = "1.5", optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
rust_decimal_macros = { workspace = true }

[[example]]
name = "simple_ticker"

[[example]]
name = "orderbook_stream"

[[example]]
name = "multi_symbol"
