[package]
name = "kraken-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "High-level SDK for Kraken WebSocket API v2"

[features]
default = []
metrics = ["prometheus", "lazy_static"]
auth = ["reqwest", "hmac", "sha2", "base64", "parking_lot", "secrecy"]

[dependencies]
kraken-types = { workspace = true }
kraken-book = { workspace = true }
kraken-ws = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
typed-builder = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

# Optional metrics dependencies
prometheus = { version = "0.14", optional = true }
lazy_static = { version = "1.5", optional = true }

# Authentication
reqwest = { version = "0.12", features = ["json"], optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
parking_lot = { version = "0.12", optional = true }
secrecy = { version = "0.10", optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
rust_decimal_macros = { workspace = true }
kraken-auth = { path = "../kraken-auth" }
kraken-futures-ws = { path = "../kraken-futures-ws" }

[[example]]
name = "simple_ticker"

[[example]]
name = "orderbook_stream"

[[example]]
name = "multi_symbol"

[[example]]
name = "advanced_reconnect"

[[example]]
name = "futures_stream"

[[example]]
name = "market_maker"
