[package]
name = "kraken-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types for Kraken WebSocket API v2"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
