[package]
name = "kraken-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WASM bindings for Kraken orderbook engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kraken-book = { workspace = true }
kraken-types = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
rust_decimal = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
