[package]
name = "kraken-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native WebSocket client for Kraken API v2"

[dependencies]
kraken-types = { workspace = true }
kraken-book = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
